swift/ql/test/extractor-tests/errors/overloaded.swift
//codeql-extractor-expected-status: 1

func foo() {}
func foo(_: Int) {}

_ = foo
